src/objects/DataSum__c.object
<CustomObject>
    <fields>
        <fullName>AmountSumExc__c</fullName>
        <label>$売上計III（税抜）⾦額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountSumInc__c</fullName>
        <label>$売上計 IV（税込）⾦額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BedRoomSumVal__c</fullName>
        <label>故障部屋数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadSumVal__c</fullName>
        <label>予約数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomTypeRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>データ集計</relationshipLabel>
        <relationshipName>refRoomType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RsvDataSumRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>売上</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>データ集計</relationshipLabel>
        <relationshipName>RsvDataSumRef_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StayPersons__c</fullName>
        <label>予約⼈数</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumDate__c</fullName>
        <label>集計日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SumType__c</fullName>
        <label>RFU(利用不可)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>故障部屋</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SumVal__c</fullName>
        <label>RFU(利用不可)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>データ集計</label>
    <nameField>
        <displayFormat>DR-{00000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>